--- a/src/styles/main-page/_help.scss
+++ b/src/styles/main-page/_help.scss
@@ -40,7 +40,6 @@
 
     @media only screen and (max-width: $bp-small) {
       gap: 3rem;
-      justify-content: stretch;
     }
     &__item {
       display: grid;
